--- a/style.css
+++ b/style.css
@@ -5,3 +5,13 @@
   margin-left: auto;
   margin-right: auto;
 }
+
+#search {
+  display: block;
+  margin: 20px;
+  width: 50%;
+  height:35px;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 30px;
+}
