--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@ html, body, main {
 
 main {
   position: relative;
+  display: flex;
+  justify-content: center;
 }
 
 #logo {
@@ -34,11 +36,16 @@ main {
 }
 
 .search-btns {
-  position: absolute;
-  left: 250px;
-  top: 250px;
-  padding: 10px;
- 
+  position: relative;
+  top: 100px;
+  /* left: 45%; */
+  text-align: center;
+  display: block;
+  width: 200px;
+  height: 70px;
+  margin-left: auto;
+  margin-right: auto;
+  
 }
 .search {
   padding: 10px;
@@ -46,7 +53,8 @@ main {
   color: rgb(73, 71, 71);;
   border: none;
   border-radius: 4px;
-  margin: 5px;
+  left: 50%;
+  cursor: pointer;
 }
 .search:hover {
   border: 1px solid #C1C1C1;
@@ -67,6 +75,8 @@ nav {
   position: relative;
   float: right;
   font-family: sans-serif;
+  display: flex;
+  flex-direction: row;
   font-size: 10px;
   padding: 10px;
 }
